h264depay: don't leak codec data buffer in byte-stream=true mode

https://bugzilla.gnome.org/show_bug.cgi?id=640063